# craft

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  main.cpp
src/node/: CMakeLists.txt  Connection.cpp  Connection.h  NodeState.cpp  NodeState.h  main.cpp  raft_network.cpp  raft_network.h  raft_node.cpp  raft_node.h  state.h
src/node/NodeState/: Candidate.cpp  Candidate.h  Follower.cpp  Follower.h  Leader.cpp  Leader.h  NodeState.cpp  NodeState.h
src/server/: CMakeLists.txt  main.cpp
src/shared/: chat_message.hpp
